<resources>
    <string name="app_name">BakeHouse</string>
    <string name="title_activity_choose_option">ChooseOption</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Menu strings-->

    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Hotels node child for updating -->

    <string name="hotelName">hotel_name</string>
    <string name="hotelLocation">location</string>
    <string name="hotelAddress">address</string>
    <string name="hotelImage">image</string>
    <!-- shared preference file name-->

    <string name="user_address">com.example.temp_user_address_preferences1</string>

    <!-- Strings used for shared preferences -->

    <string name="Add_name">Name</string>
    <string name="houseNo">House No./Flat No.</string>
    <string name="houseName">House Name</string>
    <string name="landmark">Landmark</string>
    <string name="street">Street</string>
    <string name="orderId">OrderId</string>
    <string name="totalAmount">Total-amount</string>

    <!-- Razor pay key id-->

    <string name="keyId"></string>

     <!-- Order status activity text -->

    <string name="headText">7096469416</string>
    <string name="placed">Order Placed</string>
    <string name="completed">Order Completed</string>
    <string name="pickUp">Order Pickup</string>
    <string name="delivered">Order Delivered</string>

    <!-- database nodes -->
    <string name="foodNode">Food</string>
    <string name="DishNode">Dishes</string>
    <string name="OrderNode">Orders</string>
    <string name="HotelNode">Hotels</string>
    <string name="ServicesNode">Services</string>
    <string name="VendorNode">Vendor</string>
    <string name="placedIndexStatus">placedIndex</string>
    <string name="pickupIndexStatus">pickupIndex</string>
    <string name="deliveryIndexStatus">deliveryIndex</string>
    <string name="confirmedIndexStatus">confirmedIndex</string>
    <string name="DeliveryBoyNode">DeliveryBoy</string>
    <string name="assignedIndex">assigned</string>


    <!-- Generated -->
    <string name="food">Foods</string>
    <string name="services">Services</string>
    <string name="hotelname">Loading...</string>
    <string name="dish_name">dish</string>
    <string name="rupees">55 ₹</string>
    <string name="add_text">+</string>
    <string name="subtract">-</string>
    <string name="zero">0</string>
    <string name="sign_in">Sign in</string>
    <string name="captiontext">Your best delivery Partner</string>
    <string name="phone_number">Phone Number</string>
    <string name="hash">##########</string>
    <string name="verify">Verify</string>
    <string name="time_out">Time out</string>
    <string name="please_enter_the_otp">Please enter the otp</string>
    <string name="hint_verify">******</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="pay_and_order">Pay and Order</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="_0">0</string>
    <string name="location">Location</string>
    <string name="loading_your_current_location">Loading your current location...</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="no_item_txt">No items added</string>
    <string name="order_in_progress">Order in Progress...</string>
    <string name="bread">Bread</string>

    <!-- service node child for updating -->

    <string name="serviceName">name</string>
    <string name="serviceImage">cover_pic</string>

    <!-- status Strings -->
    <string name="yes">yes</string>
    <string name="no">no</string>

    <!-- order progress bar Strings -->

    <string name="orderPlacedProgress">Your Order Placed</string>
    <string name="orderPickedProgress">Your Order Picked up</string>
    <string name="orderProgress">Order Under Progress</string>
    <string name="orderDeliveredProgress">Your order Delivered</string>


</resources>