<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/add_text"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/app_blue"

        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="4dp"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/subtract"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/app_blue"
        android:textStyle="bold"
        />



</androidx.appcompat.widget.LinearLayoutCompat>