<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/refreshLayout"
        tools:context=".Activities.OrderStatus">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:title="@string/app_name"
            />

    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delivery Boy"
        android:id="@+id/DeliveryBoy"
        android:layout_below="@id/appbar"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:textAlignment="textStart"
        android:drawablePadding="16dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headText"
        android:id="@+id/head"
        android:layout_below="@id/DeliveryBoy"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:drawableLeft="@drawable/ic_baseline_perm_phone_msg_24"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"
        android:textAlignment="textStart"
        android:drawablePadding="16dp"
        />

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:layout_margin="16dp"
        android:orientation="vertical">




            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/check"
                android:layout_weight="1"
                android:text="@string/placed"
                android:gravity="center_vertical"
                android:drawablePadding="24dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold"
                android:id="@+id/orderPlaced"

                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/check"
                android:text="@string/completed"
                android:gravity="center_vertical"
                android:drawablePadding="24dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:id="@+id/orderCompleted"
                android:textStyle="bold"
                android:visibility="gone"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pickUp"
                android:drawableLeft="@drawable/check"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:drawablePadding="24dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:id="@+id/orderPicked"
                android:textStyle="bold"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivered"
                android:drawableLeft="@drawable/check"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:drawablePadding="24dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:id="@+id/orderDelivered"
                android:textStyle="bold"
                />

        </LinearLayout>

    </RelativeLayout>



